tests/script_runtime_errors/merge_assign_target_target_no_object/error.txt
Error: 
    1 | let event = merge event of {"snot": "badger"} end
      |                   ^^^^^ Conflicting types, got integer but expected record
